FIX:Gap

--- a/main.css
+++ b/main.css
@@ -208,7 +208,7 @@ li {
     .grid-container {
         display: grid;
         grid-template-columns: 45% 50%;
-        grid-gap: 10px;
+        grid-gap: 5%;
     }
 
     .grid-container>div {
